# RiskPriceInference

./: .dropbox  .gitignore  CMakeLists.txt  README  README.md  echo  setup.py  tensorflow_trial.py  volpriceinference.cpp
data/: spy_daily_data_2000-2017.csv
doc/: Risk Price CLR Inference 2.tex  asymptotic_dist_derivation.tex  cond_gaussian_vol.tex  constraints.tex  continuous_time_identification.tex  fifty_min_slides.tex  identified_inference.tex  riskPriceInference.bib  risk_appendices.tex  risk_bibliography.bib  risk_body.tex  risk_price_inference.bib  risk_price_inference.sty  risk_price_inference.tex  risk_price_inference_2.tex  risk_price_inference_3.tex  riskpriceinference.bib  simulations_strongly_identified_region.html  slides_preamble.sty
doc/early versions/: Intro for Paul dissertation absract.docx  Risk Price CLR Inference.tex  asymptotic_dist_derivation.tex  continuous_time_identification.tex  questions_for_eric.tex  risk_price_inference.bib  risk_price_inference.tex  risk_price_inference_first_page.tex
info/: FindNumPy.cmake  build.sh  conda_build_config.yaml  meta.yaml
reference/: AC14.tex  riskprice_theory.tex
results/: qlr_draws_on_data_1000.json  qlr_draws_on_data_1800.json  qlr_draws_on_data_20.json  qlr_draws_on_data_2000_smaller_region.json  qlr_draws_on_data_20_smaller_region.json  qlr_draws_on_data_250.json  qlr_draws_on_data_250_smaller_region.json  qlr_draws_on_data_250_smaller_region_flattened.json  qlr_draws_on_data_500.json  qlr_draws_on_data_500_smaller_region_flattened.json  qlr_stats_on_data.json  reject_prop_1000_-0.05.json  reject_prop_1000_0.5.json  reject_prop_100_-0.01.json  reject_prop_100_-0.1.json  reject_prop_100_-0.4.json  reject_prop_100_-0.5.json  reject_prop_20_-0.001.json  reject_prop_250_-0.001_37000.json  reject_prop_250_-0.01.json  reject_prop_250_-0.01_37000.json  reject_prop_250_-0.1_3700.json  reject_prop_250_-0.3_37000.json  reject_prop_250_-0.4_3700.json  reject_prop_250_-0.5.json  reject_prop_50_-0.5.json  reject_prop_kharpov_1000_-0.1.json  reject_prop_kharpov_1000_0.75.json  reject_prop_kharpov_1000_0.91.json  reject_prop_kharpov_1000_0.98.json  reject_prop_kharpov_1000_0.99.json  reject_prop_kharpov_1000_0.999.json  reject_prop_kharpov_1000_0.9999.json  reject_prop_kharpov_1800_-0.1_2000.json  reject_prop_kharpov_1800_-0.4_2000.json  reject_prop_kharpov_250_-0.01_10000.json  reject_prop_kharpov_250_-0.01_2000.json  reject_prop_kharpov_250_-0.01_3700.json  reject_prop_kharpov_250_-0.01_37000.json  reject_prop_kharpov_250_-0.1_10000.json  (+12 more)
riskprice/: __init__.py  derivatives_of_moment_conditions.ipynb  moment_conditions.ipynb  simplification_of_physical_measure_functions.ipynb  volprice.py
riskprice/.ipynb_checkpoints/: derivatives_of_moment_conditions-checkpoint.ipynb
src/: riskpriceinference.cpp  volpriceinference.cpp
tests/: test_riskprice.py
volpriceinference/: .volprice.py.kate-swp  Derivation_of_sigma_4_variance.ipynb  __init__.py  asymptotic_distributions_robust.ipynb  asymptotic_distributions_under_strong_id.ipynb  asymptotic_distributions_under_weak_id.ipynb  derivatives_of_moment_conditions.ipynb  empirical_analysis.ipynb  moment_conditions.ipynb  robust_inference_on_data-Copy2.ipynb  robust_inference_on_data.ipynb  simplification_of_physical_measure_functions.ipynb  simulations-Copy1.ipynb  simulations-Copy2.ipynb  simulations.ipynb  simulations_analysis.ipynb  testing.ipynb  volprice.py
